shrinks nav li's width to fit-content only, made navmenu-header margin-bottom 10%, should be good enough for all if not most screen sizes, should no longer cut off the navbar text

--- a/src/index.css
+++ b/src/index.css
@@ -285,8 +285,12 @@ body {
   /*? ########################################################################################################################  */
   /*? ########################################################################################################################  */
 
-  .navbar-collapse {
-    margin-top: 50%;
+  div.navmenu-header {
+    margin-bottom: 10%;
+  }
+
+  li.nav-item {
+    width: fit-content;
   }
 
   /* removes janky transition as the height adjusts to meet full screen size  */
